glib-macros/tests/clone_compiletest/06-clone-unsupported-property.stderr
error: unsupported capture attribute property `stronk`: only `rename_to` is supported
 --> tests/clone_compiletest/06-clone-unsupported-property.rs:4:21
  |
4 |     clone!(#[strong(stronk)] self.v, move || {});
  |                     ^^^^^^
